added maven plugin desc fix

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,6 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>/static/index.html</welcome-file>
+		<welcome-file></welcome-file>
 	</welcome-file-list>	
 </web-app>
