--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<version>2.1.4</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate4</artifactId>
+			<version>2.1.2</version>
+		</dependency>    
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>3.2.1.RELEASE</version>
