--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,6 @@
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>3.2.2.RELEASE</org.springframework.version>
-		<org.springframework.security.version>3.0.2.RELEASE</org.springframework.security.version>
 		<org.slf4j.version>1.7.2</org.slf4j.version>
 	</properties>
 
@@ -31,6 +29,11 @@
 		<repository>
 			<id>Springframework milestone</id>
 			<url>http://maven.springframework.org/milestone</url>
+		</repository>
+		<repository>
+			<id>springsource-repo</id>
+			<name>SpringSource Repository</name>
+			<url>http://repo.springsource.org/release</url>
 		</repository>
 	</repositories>
 
@@ -59,7 +62,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-logging</artifactId>
@@ -70,22 +73,22 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -112,12 +115,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>{org.springframework.version}</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -162,22 +165,22 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>{org.slf4j.version}</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>{org.slf4j.version}</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>{org.slf4j.version}</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-ext</artifactId>
-			<version>{org.slf4j.version}</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
