--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,5 +29,13 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>aoFilter</filter-name>
+		<filter-class>net.tmhub.AccessOriginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>aoFilter</filter-name>
+		<servlet-name>spring</servlet-name>
+	</filter-mapping>
 
 </web-app>
